--- a/SysManager.UI.Admin/src/app/components/account/recovery/recovery.component.html
+++ b/SysManager.UI.Admin/src/app/components/account/recovery/recovery.component.html
@@ -5,13 +5,13 @@
         <c-card class="mx-4">
           <c-card-body class="p-4">
             <form cForm>
-              <h1>Nova Conta</h1>
-              <p class="text-medium-emphasis">Cadastre sua conta</p>
+              <h1>Conta</h1>
+              <p class="text-medium-emphasis">Informe os dados para recuperar sua conta</p>
               <c-input-group class="mb-3">
                 <span cInputGroupText>
                   <svg cIcon name="cilUser"></svg>
                 </span>
-                <input autoComplete="name" cFormControl placeholder="Username" name="username" id="username"/>
+                <input autoComplete="name" cFormControl placeholder="Username"  name="username" id="username"/>
               </c-input-group>
               <c-input-group class="mb-3">
                 <span cInputGroupText>@</span>
@@ -30,16 +30,16 @@
                 <input autoComplete="new-password" cFormControl placeholder="Repeat password" type="password" name="passwordConfirm" id="passwordConfirm"/>
               </c-input-group>
               <div class="d-grid">
-                <button cButton color="success" (click)='createAccount()'>Criar Conta</button>
+                <button cButton color="success" (click)='recovery()'>Recuperar Conta</button>
               </div>
             </form>
           </c-card-body>
         </c-card>
       </c-col>
     </c-row>
-    <c-row class="justify-content-center" id="colerror" style="display: none; margin-top: 10px;">
+    <c-row class="justify-content-center" id="colerror" style="display: none;">
       <c-col md="8">
-         <div class="alert alert-danger" id="dvAlert" role="alert">As senhas não conferem...</div>
+         <div class="alert alert-danger" role="alert" id="dvAlert">As senhas não conferem...</div>
       </c-col>
     </c-row>
   </c-container>
