--- a/SysManager.UI.Admin/src/app/components/account/recovery/recovery.component.html
+++ b/SysManager.UI.Admin/src/app/components/account/recovery/recovery.component.html
@@ -1,3 +1,7 @@
+<div class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh; display: none" id="loading">
+  <i class="spinner-grow spinner-grow-sm"></i>
+  <span class="m-1">Loading...</span>
+</div>
 <div class="bg-light min-vh-100 d-flex flex-row align-items-center">
   <c-container>
     <c-row class="justify-content-center">
