--- a/SysManager.UI.Admin/src/app/components/dashboard/dashboard.component.html
+++ b/SysManager.UI.Admin/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<!-- <c-row>
+<c-row>
     <c-col xs="9" lg="4">
       <c-card class="mb-4">
         <c-card-header>
@@ -16,7 +16,7 @@
         </c-card-header>
         <c-card-body>
           <c-chart type="pie" [data]="chartPieData2"></c-chart>
-          
+
         </c-card-body>
       </c-card>
     </c-col>
@@ -30,6 +30,6 @@
           <c-chart type="pie" [data]="chartPieData3"></c-chart>
         </c-card-body>
       </c-card>
-    </c-col>   
-     
-  </c-row> -->
+    </c-col>
+
+  </c-row>
