--- a/SysManager.UI.Admin/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/SysManager.UI.Admin/src/app/containers/default-layout/default-header/default-header.component.html
@@ -12,39 +12,6 @@
           size="lg"
         ></svg>
       </button>
-      <c-header-nav class="d-none d-lg-flex me-auto">
-        <c-nav-item>
-          <a cNavLink routerLink="/dashboard" routerLinkActive="active">
-            Dashboard
-          </a>
-        </c-nav-item>
-        <c-nav-item>
-          <a cNavLink routerLink="/users" routerLinkActive="active">Users</a>
-        </c-nav-item>
-        <c-nav-item>
-          <a cNavLink routerLink="/settings" routerLinkActive="active">
-            Settings
-          </a>
-        </c-nav-item>
-      </c-header-nav>
-  
-      <c-header-nav class="d-none d-lg-flex">
-        <c-nav-item>
-          <a routerLink="./" cNavLink>
-            <svg cIcon name="cilBell" size="lg"></svg>
-          </a>
-        </c-nav-item>
-        <c-nav-item>
-          <a routerLink="./" cNavLink>
-            <svg cIcon name="cilList" size="lg"></svg>
-          </a>
-        </c-nav-item>
-        <c-nav-item>
-          <a routerLink="./" cNavLink>
-            <svg cIcon name="cilEnvelopeOpen" size="lg"></svg>
-          </a>
-        </c-nav-item>
-      </c-header-nav>
       <c-header-nav class="ms-3">
         <ng-container *ngTemplateOutlet="userDropdown"></ng-container>
       </c-header-nav>
@@ -77,88 +44,21 @@
       </button>
       <ul cDropdownMenu class="pt-0 pr-5 w-auto">
         <li>
-          <h6 cDropdownHeader class="bg-light fw-semibold py-2">Account</h6>
-        </li>
-        <li>
-          <a routerLink="./" cDropdownItem>
-            <svg cIcon class="me-2" name="cilBell"></svg>
-            Updates
-            <c-badge class="ms-2 float-end" color="info">
-              42
-            </c-badge>
-          </a>
-        </li>
-        <li>
-          <a routerLink="./" cDropdownItem>
-            <svg cIcon class="me-2" name="cilEnvelopeOpen"></svg>
-            Messages
-            <c-badge class="ms-2 float-end" color="success">
-              42
-            </c-badge>
-          </a>
-        </li>
-        <li>
-          <a routerLink="./" cDropdownItem>
-            <svg cIcon class="me-2" name="cilTask"></svg>
-            Tasks
-            <c-badge class="ms-2 float-end" color="danger">
-              42
-            </c-badge>
-          </a>
-        </li>
-        <li>
-          <a routerLink="./" cDropdownItem>
-            <svg cIcon class="me-2" name='cilCommentSquare'></svg>
-            Comments
-            <c-badge class="ms-auto" color="warning">
-              42
-            </c-badge>
-          </a>
-        </li>
-        <li>
-          <h6 cDropdownHeader class="bg-light fw-semibold py-2">Settings</h6>
+          <h6 cDropdownHeader class="bg-light fw-semibold py-2">Minha conta</h6>
         </li>
         <li></li>
         <li>
-          <a routerLink="./" cDropdownItem>
+          <a cDropdownItem>
             <svg cIcon class="me-2" name="cilUser"></svg>
-            Profile
+            {{activeUser}}
           </a>
         </li>
         <li>
-          <a routerLink="./" cDropdownItem>
-            <svg cIcon class="me-2" name="cilSettings"></svg>
-            Settings
+          <a cDropdownItem (click)="logout()">
+            <svg cIcon class="me-2" name="cilAccountLogout"></svg>
+            Sair
           </a>
-        </li>
-        <li>
-          <a routerLink="./" cDropdownItem>
-            <svg cIcon class="me-2" name="cilCreditCard"></svg>
-            Payments
-            <c-badge class="ms-2 float-end" color="secondary">
-              42
-            </c-badge>
-          </a>
-        </li>
-        <li>
-          <a routerLink="./" cDropdownItem>
-            <svg cIcon class="me-2" name="cilFile"></svg>
-            Projects
-            <c-badge class="ms-2 float-end" color="primary">
-              42
-            </c-badge>
-          </a>
-        </li>
-        <li>
-          <hr cDropdownDivider/>
-        </li>
-        <li>
-          <a routerLink="./" cDropdownItem>
-            <svg cIcon class="me-2" name="cilLockLocked"></svg>
-            Lock Account
-          </a>
-        </li>
-        <li></li>
+        </li>  
       </ul>
     </c-dropdown>
   </ng-template>
